css/styles.css
.dragable {
  width: 100px;
  height: 50px;
  background-color: black;
  position: absolute;

  cursor: move;
}
.add {
  cursor: pointer;
  padding: 20px;
  font-size: 40px;
  text-align: center;
  border: 1px solid black;
  border-radius: 3px;
  width: 150px;
  box-shadow: 5px 5px 10px rgba(0,0,0,0.2);
  margin: 50px;

}
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

.modal-content {
    background-color: white;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;

    width: 80%; /* Could be more or less, depending on screen size */
}
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}
.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}
.modal img {
  max-width: 800px; 
}

